# demo_bdd

./: .black.toml  .gitignore  .ruff.toml  README.md  default.nix  pyproject.toml  pytest.ini
components/: compose_message.py  insert_contacts_component.py  notification_component.py  user_dropdown.py
config/: dynamic_test_data.py
pages/: inbox_page.py  login_page.py
tests/: conftest.py  test_login_email.py  test_send_email.py
tests/features/: email_login.feature  send_email.feature
